--- a/package.json
+++ b/package.json
@@ -9,18 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.39.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
-    "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
@@ -32,11 +25,5 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
-  },
-  "resolutions": {
-    "date-fns": "^3.3.1"
-  },
-  "overrides": {
-    "date-fns": "^3.3.1"
   }
 }
